configs/netology/kube_manifests/kube-deploy-atlantis.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: atlantis
spec:
  serviceName: atlantis
  replicas: 1
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      partition: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: atlantis
  template:
    metadata:
      labels:
        app.kubernetes.io/name: atlantis
    spec:
      securityContext:
        fsGroup: 1000 # Atlantis group (1000) read/write access to volumes.
      containers:
      - name: atlantis
        image: ghcr.io/runatlantis/atlantis:v0.32.0 # 1. Replace <VERSION> with the most recent release.
        volumeMounts:
        - name: atlantis-data
          mountPath: /atlantis
        - name: cm-atlantis-repo
          mountPath: /atlantis/repo_config
        - name: cm-atlantis-terraformrc
          mountPath: /home/atlantis/.terraformrc
          subPath: .terraformrc
        - name: secret-atlantis-ssh-key
          mountPath: /home/atlantis/.ssh
          readOnly: true
        ports:
        - name: atlantis
          containerPort: 4141
        resources:
          requests:
            memory: 512Mi
            cpu: 800m
          limits:
            memory: 512Mi
            cpu: 800m
        livenessProbe:
          # We only need to check every 60s since Atlantis is not a
          # high-throughput service.
          periodSeconds: 60
          httpGet:
            path: /healthz
            port: 4141
            # If using https, change this to HTTPS
            scheme: HTTP
        readinessProbe:
          periodSeconds: 60
          httpGet:
            path: /healthz
            port: 4141
            # If using https, change this to HTTPS
            scheme: HTTP
      volumes:
        - name: cm-atlantis-repo
          configMap:
            name: atlantis-repo
        - name: cm-atlantis-terraformrc
          configMap:
            name: atlantis-terraformrc
        - name: secret-atlantis-ssh-key
          secret:
            secretName: atlantis-ssh-key
  volumeClaimTemplates:
  - metadata:
      name: atlantis-data
    spec:
      accessModes: ["ReadWriteOnce"] # Volume should not be shared by multiple nodes.
      resources:
        requests:
          # The biggest thing Atlantis stores is the Git repo when it checks it out.
          # It deletes the repo after the pull request is merged.
          storage: 5Gi
---
apiVersion: v1
kind: Service
metadata:
  name: svc-atlantis
spec:
  type: ClusterIP
  ports:
  - name: atlantis
    port: 80
    targetPort: 4141
  selector:
    app.kubernetes.io/name: atlantis
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-netology
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - atlantis.gfg24.com
    secretName: atlantis-secret-tls
  rules:
  - host: atlantis.gfg24.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-atlantis
            port:
              number: 80
---
#apiVersion: v1
#kind: Pod
#metadata:
#  name: multitool-pod
#spec:
#  containers:
#  - name: multitool-pod
#    imagePullPolicy: IfNotPresent
#    image: wbitt/network-multitool
#    ports:
#    - containerPort: 8080
